# cellar-wrapper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  usage_question.md
.github/workflows/: ci.yml
docs/: API_CONTRACT.md  CELLAR_API_RESEARCH.md  COMMANDS_SIMPLE.md  COMMAND_CONTRACTS.md  COMMAND_GUIDE.md  COMMUNIC_RESEARCH.md  CONTRACT_EXAMPLES.md  CONTRACT_REFERENCE.md  DATA_ARTIFACTS.md  DATA_PROVENANCE.md  DORA_RESEARCH.md  EUROVOC.md  MAINTAINER_GUIDE.md  METHOD_MAPPING.md  README.md  WRAPPER_BLUEPRINT.md  eurovoc_microthesauri.json
docs/artifact/: command-manifest.json  eurovoc_all.json  eurovoc_concepts.csv  eurovoc_explorer.html  eurovoc_with_groups.json  subject_matter.csv  subject_matter_all.json  subject_matter_counts.json  taxonomy_explorer.html
docs/examples/: contract-examples.json
docs/manual_test/: README.md  kwargs_profiles.json
docs/research/: CASE_LAW_RESEARCH.md  CELLAR_API_RESEARCH.md  COMMUNIC_RESEARCH.md  DORA_RELATED_ACTS_REPORT.md  DORA_RESEARCH.md  EUROVOC_HISTORY.md  PSR_RESEARCH.md  README.md  WRAPPER_BLUEPRINT_ARCHIVE.md
scripts/: audit_contract_examples_live.py  build_runtime_eurovoc_index.py  build_runtime_subject_matter_index.py  manual_test_contracts.py  render_command_manifest.py  render_contract_examples.py
src/cellar_wrapper/: __init__.py  cli.py  cli_policy.py  cli_runtime.py  cli_specs.py  client.py  client_config.py  constants.py  contract_examples.py  contract_manifest.py  contract_specs.py  date_utils.py  error_serialization.py  errors.py  eurovoc_index.py  http.py  mcp_server.py  models.py  parser.py  serialization.py  sparql.py  subject_matter_index.py  version.py
temp/: acts-to-celex.md  contract-notes.md  render_accepted_examples.py  session-workflow.md
temp/examples/: accepted.json  (+1 more)
tests/: conftest.py  helpers.py
(+96 files in other folders)
