[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellar-wrapper"
version = "0.1.0"
description = "Typed sync-first wrapper for EU Publications Office CELLAR"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
keywords = ["cellar", "celex", "eu-law", "sparql", "legal-tech"]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "mypy>=1.11.0,<2.0.0",
  "ruff>=0.6.0,<1.0.0",
  "types-setuptools"
]

[project.urls]
Repository = "https://github.com/Kymylyy/cellar-wrapper"
Issues = "https://github.com/Kymylyy/cellar-wrapper/issues"
Documentation = "https://github.com/Kymylyy/cellar-wrapper/tree/main/docs"

[project.scripts]
cellar = "cellar_wrapper.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
  "live: tests that hit live CELLAR endpoints"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
mypy_path = "src"
packages = ["cellar_wrapper"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = true
